--- a/index.css
+++ b/index.css
@@ -1,11 +1,28 @@
-body {
-    background-color: rgb(224, 103, 94);
-    }
-
-header {
+.grid-container .item1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #013538;
     text-align: center;
+    font-size: 20px;
+}
+
+a {
+    font-size: 20px;
+    border: 1px solid #c3c3c3;
+}
+
+h2 {
+    text-align: left;
+    padding: 10px;
+}
+
+.info {
+    font-size: 25px;
+    text-align: left;
+    margin: auto;
+}
+
+h3 {
+    font-size: 25px;
 }
 
 ul {
@@ -16,17 +33,8 @@ ol {
     color: #013538;
 }
 
-.sub{
-    font-size: 50px;
-}
-
-.info{
-    font-size: 30px;
-}
-
-a {
-    font-size: 40px;
-    border: 1px solid #c3c3c3;
+.sub {
+    font-size: 25px;
 }
 
 img {
@@ -34,6 +42,15 @@ img {
     border: 5px solid #555;
 }
 
-.pic1{
-border-radius: 50%;
+.pic1 {
+    border-radius: 50%;
+    height: 500px;
+    border: 5px solid #555;
+}
+
+.grid-container .item5 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #013538;
+    text-align: center;
+    font-size: 20px;
 }
